# data-pipeline-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_SUMMARY.md  README.md  README_IMPROVEMENTS.md  REAL_DATA_FIXED.md  WEB_INTERFACE.md  docker-compose.production.yml  docker-compose.yml  ecommerce_pipeline.yaml  fix_quality_issues.py  pyproject.toml  requirements.txt  run_production_app.py  run_safe_app.py  start_server.py  start_web_app.py  test_pipeline.yaml  test_real_data.py  test_web_app.py
config/: alert_rules.yml  data_cleaning_rules.yaml  logging.yaml  nginx.conf  prometheus.yml
config/environments/: base.yaml  development.yaml  production.yaml
config/grafana/dashboards/: data-pipeline-overview.json
config/pipelines/: ecommerce_pipeline.yaml  finance_pipeline.yaml  iot_pipeline.yaml  s3_json_pipeline.yaml  sample_csv_pipeline.yaml  streaming_pipeline.yaml
data/: sample_data.csv
data/processed/: .gitkeep
data/raw/: .gitkeep
datasets/ecommerce/: customers.csv  customers.json  order_items.csv  orders.csv  products.csv
datasets/finance/: accounts.csv  loans.csv  transactions.csv
datasets/iot/: device_events.csv  device_status.json  devices.csv
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/tutorials/01-foundations/: first-pipeline.md
k8s/: deployment.yaml  namespace.yaml
notebooks/exploration/: 01_data_exploration_example.ipynb
scripts/: backup_scheduler.py  deploy.sh  file_manager.py  fix_data_quality.py  generate_sample_data.py  queue_processor.py
sql/: init.sql
src/data_pipeline/: __init__.py
src/data_pipeline/architecture/: __init__.py  event_bus.py  microservices.py
src/data_pipeline/cli/: main.py  quality_commands.py
src/data_pipeline/core/: base.py  config.py  pipeline.py  queue_manager.py
src/data_pipeline/monitoring/: __init__.py  health_check.py  metrics_collector.py  structured_logging.py
src/data_pipeline/observability/: __init__.py  dashboard.py  metrics.py
src/data_pipeline/performance/: __init__.py  cache.py
src/data_pipeline/processors/: __init__.py  pandas_processor.py  spark_processor.py
src/data_pipeline/security/: auth.py
src/data_pipeline/sources/: __init__.py  csv_source.py  json_source.py  s3_source.py
src/data_pipeline/storage/: __init__.py  postgresql_storage.py
src/data_pipeline/streaming/: __init__.py  kafka_source.py  redis_sink.py  stream_processor.py
src/data_pipeline/transformations/: __init__.py  feature_engineering.py  pivot_operations.py  time_series.py  window_functions.py
src/data_pipeline/utils/: __init__.py  data_catalog.py  data_cleaner.py  data_profiler.py  data_validator.py  lineage_tracker.py  quality_monitor.py  schema_inference.py
src/data_pipeline/web/: __init__.py  app.py
templates/: base.html  create_pipeline.html  dashboard.html  data_quality.html  monitoring.html  pipelines.html  settings.html
tests/: conftest.py  test_quality_monitor.py
tests/integration/: test_end_to_end.py
tests/performance/: test_benchmarks.py
tests/unit/: test_observability.py  test_pipeline_core.py
