[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
description = "Flexible data pipeline for large dataset analysis and visualization"
authors = [{name = "Data Pipeline Team"}]
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    
    # Database connectivity
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    
    # AWS/Cloud storage
    "boto3>=1.28.0",
    
    # Configuration and utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.4.0",
    "PyYAML>=6.0",
    
    # Data profiling and validation
    "great-expectations>=0.17.0",
    "ydata-profiling>=4.0.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    
    # Logging and monitoring
    "structlog>=23.1.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.4.0",
    "findspark>=2.0.1",
]

dev = [
    # Testing framework and coverage
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",
    
    # Code quality and formatting
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=23.7.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-simplify>=0.20.0",
    
    # Type checking
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
    
    # Security and vulnerability scanning
    "bandit>=1.7.0",
    "safety>=2.3.0",
    
    # Documentation linting
    "pydocstyle>=6.3.0",
    
    # Pre-commit hooks
    "pre-commit>=3.3.0",
    
    # Documentation generation
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    
    # Performance profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    
    # Additional dev tools
    "factory-boy>=3.3.0",  # Test data generation
    "freezegun>=1.2.0",    # Time mocking
    "responses>=0.23.0",   # HTTP mocking
]

monitoring = [
    "prometheus-client>=0.18.0",
    "grafana-api>=1.0.3",
    "psutil>=5.9.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
]

web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

all = [
    "data-pipeline[spark,dev,monitoring,web]"
]

[project.scripts]
data-pipeline = "data_pipeline.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/data_pipeline --cov-report=html --cov-report=term-missing"